--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,14 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
+      "@environments/*": ["environments/*"],
       "@models/*": ["app/models/*"],
+      "@services/*": ["app/services/*"],
+      "@actions/*": ["app/store/actions/*"],
+      "@effects/*": ["app/store/effects*"],
+      "@reducers/*": ["app/store/reducers/*"],
+      "@selectors/*": ["app/store/selectors/*"],
+      "@states/*": ["app/store/states/*"],
     },
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
