--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "paths": {
       "@environments/*": ["environments/*"],
       "@models/*": ["app/models/*"],
+      "@containers/*": ["app/containers/*"],
       "@pages/*": ["app/pages/*"],
       "@services/*": ["app/services/*"],
       "@actions/*": ["app/store/actions/*"],
